Fixed layout issue of the Search in all folders control

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -63,19 +63,23 @@
 	.folders_search {
 		color: #bbbbbb;
 		font-size: 12pt;
-		float: left;
-		margin-left: 32px;
-		margin-top: -34px;
-		opacity: 0;
-		visibility: hidden;
-		.transition(~"max-height 0.2s ease 0s, opacity 0.2s ease 0s, visibility 0.1s");
+		// float: left;
+		// margin-left: 32px;
+		// margin-top: -34px;
+		margin-bottom: 10px;
+		// opacity: 0;
+		// visibility: hidden;
+		text-align: left;
+		// .transition(~"max-height 0.2s ease 0s, opacity 0.2s ease 0s, visibility 0.1s");
+		// .transition(~"opacity 0.2s ease 0s, visibility 0.1s");
 
-		&.folders_search_expand {
-			opacity: 1;
-			visibility: visible;
+		// &.folders_search_expand {
+		// 	opacity: 1;
+		// 	visibility: visible;
 
-			.transition(~"max-height 0.9s ease 0s, opacity 0.9s ease 0s, visibility 0.9s");
-		}
+			// .transition(~"max-height 0.9s ease 0s, opacity 0.9s ease 0s, visibility 0.9s");
+			// .transition(~"opacity 0.9s ease 0s, visibility 0.9s");
+		// }
 		
 		.folders_search_label {
 			position: relative;
